<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewCreateInvitation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCreateInvite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CreateInvite">

        <ImageView
            android:id="@+id/backButtonCreateInvitePage"
...
            android:layout_marginTop="30dp"
            android:layout_marginBottom="150dp"
            android:text="Create Invite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listOfQuestionsCreateInvite"
            app:layout_constraintVertical_bias="0.0" />

        <RelativeLayout
            android:id="@+id/inputLayout"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewQuestions">

            <EditText
                android:id="@+id/inputQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ems="10"
                android:hint="Enter Question here"
                android:maxLength="100" />

            <ImageView
                android:id="@+id/addQuestionImg"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="7sp"
                android:layout_toRightOf="@+id/inputQuestion"
                android:src="@drawable/ic_baseline_add_24" />
...
