<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.invites.InvitationFragment">
                               <TextView
                                    android:id="@+id/SortByTextView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="20dp"
                                    android:layout_marginTop="20dp"
                                    android:layout_marginEnd="333dp"
                                    android:text="@string/text_sort_by"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintHorizontal_bias="0.0"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <Spinner
                                        android:id="@+id/SortOptionsSpinner"
                                        android:layout_width="200dp"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="16dp"
                                        android:layout_marginTop="16dp"
                                        android:layout_marginEnd="6dp"
                                        app:layout_constraintEnd_toStartOf="@+id/SortOrderSpinner"
                                        app:layout_constraintStart_toEndOf="@+id/SortByTextView"
                                        app:layout_constraintTop_toTopOf="parent"
                                        android:entries="@array/invitation_sort_options"/>

                                <Spinner
                                        android:id="@+id/SortOrderSpinner"
                                        android:layout_width="100dp"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="6dp"
                                        android:layout_marginTop="16dp"
                                        android:layout_marginEnd="20dp"
                                        app:layout_constraintEnd_toEndOf="parent"
                                        app:layout_constraintStart_toEndOf="@+id/SortOptionsSpinner"
                                        app:layout_constraintTop_toTopOf="parent"
                                        android:entries="@array/invitation_sort_order_options" />

        <TextView
            android:id="@+id/text_invites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SortOptionsSpinner" />

        <ListView
                android:id="@+id/invitationListNotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:paddingBottom="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_invites" />

</androidx.constraintlayout.widget.ConstraintLayout>

