...
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutOuterInviteFrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.InviteFragment">

        <TextView
            android:id="@+id/textViewTitleAddress"
...
            app:layout_constraintBottom_toTopOf="@+id/listOfResponses"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUtilitiesList" />

        <Button
            android:id="@+id/createInvitationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Create Invite"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
...
